# tidyecon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding_backends.md  architecture.md  stata_parity.md
examples/: 01_quickstart.py  02_pyfixest.py  03_linearmodels.py
src/tidyecon/: __init__.py  _adapters.py  _protocol.py  _summary.py
src/tidyecon/renderers/: docx.py  html.py  latex.py
src/tidyecon/validate/: fixtures.py  runner.py
tests/: conftest.py  test_adapters.py  test_pyfixest.py  test_summary.py  test_validate.py
